SF6-MVC-03. Refactor BeerController and BeerControllerTest to fix issue with BEER_PATH constant and the RequestMapping annotation. Added BeerControllerIT for integration tests on the controller. Added BeerServiceJPA to use H2 DB instead of the static HashMap. Added CustomerControllerIT for integration tests on the controller. Refactor CustomerControllerTest to use getFirst instead of get(0) for the first element of the list. Added CustomerServiceJPA to use H2 DB instead of the static HashMap. Added ExceptionController to have a global controller for the NotFoundExceptions thrown from the controllers.